Corrected FindBugs warnings.